crates/flotilla-tui/tests/snapshots/snapshots__zoom_layout_uses_full_content_area.snap
---
source: crates/flotilla-tui/tests/snapshots.rs
expression: output
---
 ⚓  flotilla  | my-project | [+]
┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────── ⚙ ┐
│      Source     Path              Description                        Branch            WT  WS  PR   SS   Issues Git  │
│      ── Checkouts ──                                                                                                 │
│▸  ○                   feat-dashbo checkout feat-dashboard            feat-dashboard    ✓                             │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
LAYOUT ZOOM                  <ENT> OPEN  <.> MENU  </> SEARCH  <h> HOST LOCAL  <n> NEW  <?> HELP 
